Fixes gap under mountain on mobile

--- a/src/site/style.css
+++ b/src/site/style.css
@@ -569,5 +569,6 @@ button {
 
   .hero__svg-bg {
     height: 50vh;
+    top: 25vh;
   }
 }
